--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
       createUnityInstance(canvas, config, (progress) => {
         document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
       }).then((unityInstance) => {
-        document.querySelector("#unity-loading-bar").style.display = "none";
-        document.querySelector("#unity-fullscreen-button").onclick = () => {
-          unityInstance.SetFullscreen(1);
-        };
+        window.unityInstance = unityInstance;
 
+        // Unity 준비 후 얼굴 추적 시작
+        // window.unityInstance.SendMessage("FaceReceiver", "OnFaceMove", "test");
       }).catch((message) => {
         alert(message);
       });
