--- a/index.html
+++ b/index.html
@@ -1,62 +1,95 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="ko">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Unity Web Player | FaceTracking</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>FaceTracking (Unity WebGL + MediaPipe)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <style>
+    body {
+      margin: 0;
+      background: #111;
+      color: #ddd;
+      font-family: system-ui, sans-serif;
+    }
+
+    #unity-container {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #unity-canvas {
+      background: #000;
+      width: 960px;
+      height: 600px;
+    }
+
+    #unity-warning {
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      right: 12px;
+      z-index: 10;
+    }
+
+    #unity-loading-bar {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      max-width: 480px;
+    }
+
+    #unity-progress-bar-empty {
+      width: 100%;
+      height: 8px;
+      background: #333;
+      border-radius: 999px;
+      overflow: hidden;
+    }
+
+    #unity-progress-bar-full {
+      width: 0%;
+      height: 100%;
+      background: #55c;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="unity-container" class="unity-desktop">
-    <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+  <div id="unity-container">
+    <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
+    <div id="unity-warning"></div>
     <div id="unity-loading-bar">
-      <div id="unity-logo"></div>
       <div id="unity-progress-bar-empty">
         <div id="unity-progress-bar-full"></div>
       </div>
     </div>
-    <div id="unity-warning"> </div>
-    <div id="unity-footer">
-      <div id="unity-logo-title-footer"></div>
-      <div id="unity-fullscreen-button"></div>
-      <div id="unity-build-title">FaceTracking</div>
-    </div>
   </div>
-  <script src="face-runner.js"></script>
 
   <script>
-    var canvas = document.querySelector("#unity-canvas");
-
-    // Shows a temporary message banner/ribbon for a few seconds, or
-    // a permanent error message on top of the canvas if type=='error'.
-    // If type=='warning', a yellow highlight color is used.
-    // Modify or remove this function to customize the visually presented
-    // way that non-critical warnings and error messages are presented to the
-    // user.
+    // Unity 로딩 메시지 띄우기 (선택)
     function unityShowBanner(msg, type) {
-      var warningBanner = document.querySelector("#unity-warning");
-      function updateBannerVisibility() {
-        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-      }
-      var div = document.createElement('div');
-      div.innerHTML = msg;
-      warningBanner.appendChild(div);
-      if (type == 'error') div.style = 'background: red; padding: 10px;';
-      else {
-        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-        setTimeout(function () {
-          warningBanner.removeChild(div);
-          updateBannerVisibility();
-        }, 5000);
-      }
-      updateBannerVisibility();
+      const el = document.getElementById("unity-warning");
+      const div = document.createElement("div");
+      div.textContent = msg;
+      div.style = "padding:8px 12px;margin-bottom:8px;border-radius:8px;";
+      if (type === "error") div.style.background = "#b33";
+      else div.style.background = "#664";
+      el.appendChild(div);
+      setTimeout(() => div.remove(), 5000);
     }
 
-    var buildUrl = "Build";
-    var loaderUrl = buildUrl + "/Build.loader.js";
-    var config = {
-      arguments: [],
+    const canvas = document.getElementById("unity-canvas");
+    const buildUrl = "Build";
+    const loaderUrl = buildUrl + "/Build.loader.js";
+    const config = {
       dataUrl: buildUrl + "/Build.data",
       frameworkUrl: buildUrl + "/Build.framework.js",
       codeUrl: buildUrl + "/Build.wasm",
@@ -65,65 +98,37 @@
       productName: "FaceTracking",
       productVersion: "0.1",
       showBanner: unityShowBanner,
+      // 필요시: devicePixelRatio 낮추기 (모바일 성능)
+      // devicePixelRatio: 1,
     };
 
-    // By default, Unity keeps WebGL canvas render target size matched with
-    // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-    // Set this to false if you want to decouple this synchronization from
-    // happening inside the engine, and you would instead like to size up
-    // the canvas DOM size and WebGL render target sizes yourself.
-    // config.matchWebGLToCanvasSize = false;
-
-    // If you would like all file writes inside Unity Application.persistentDataPath
-    // directory to automatically persist so that the contents are remembered when
-    // the user revisits the site the next time, uncomment the following line:
-    // config.autoSyncPersistentDataPath = true;
-    // This autosyncing is currently not the default behavior to avoid regressing
-    // existing user projects that might rely on the earlier manual
-    // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-    // expected to change.
-
-    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-      // Mobile device style: fill the whole browser client area with the game canvas:
-
-      var meta = document.createElement('meta');
-      meta.name = 'viewport';
-      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-      document.getElementsByTagName('head')[0].appendChild(meta);
-      document.querySelector("#unity-container").className = "unity-mobile";
-      canvas.className = "unity-mobile";
-
-      // To lower canvas resolution on mobile devices to gain some
-      // performance, uncomment the following line:
-      // config.devicePixelRatio = 1;
-
-
-    } else {
-      // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-      canvas.style.width = "960px";
-      canvas.style.height = "600px";
-    }
-
-    document.querySelector("#unity-loading-bar").style.display = "block";
-
-    var script = document.createElement("script");
-    script.src = loaderUrl;
-    script.onload = () => {
-      createUnityInstance(canvas, config, (progress) => {
-        document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-      }).then((unityInstance) => {
-        window.unityInstance = unityInstance;
-
-        // Unity 준비 후 얼굴 추적 시작
-        // window.unityInstance.SendMessage("FaceReceiver", "OnFaceMove", "test");
-      }).catch((message) => {
-        alert(message);
-      });
+    // Unity 로더 불러와 인스턴스 생성
+    const s = document.createElement("script");
+    s.src = loaderUrl;
+    s.onload = () => {
+      createUnityInstance(canvas, config, p => {
+        document.getElementById("unity-progress-bar-full").style.width = (p * 100) + "%";
+      })
+        .then(unity => {
+          window.unityInstance = unity;
+          // Unity 준비 후 1초 뒤 얼굴추적 시작 (매우 안정적)
+          setTimeout(() => {
+            if (window.__FaceTracker) {
+              window.__FaceTracker.start("FaceReceiver", "OnFaceMove", 1.5);
+            } else {
+              console.warn("__FaceTracker not found. Ensure face-runner.js loaded.");
+            }
+          }, 1000);
+        })
+        .catch(err => {
+          alert(err);
+        });
     };
-
-    document.body.appendChild(script);
-
+    document.body.appendChild(s);
   </script>
+
+  <!-- 얼굴추적 모듈 (CPU delegate, VIDEO 모드 / SendMessage 전송) -->
+  <script type="module" src="face-runner.js"></script>
 </body>
 
 </html>
